After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 734987 - udp: fix udpsrc documentation
udp: fix udpsrc documentation
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
unspecified
Other All
: Normal normal
: 1.5.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-08-18 09:57 UTC by Víctor Manuel Jáquez Leal
Modified: 2014-08-18 10:03 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
udp: fix udpsrc documentation (1.79 KB, patch)
2014-08-18 09:57 UTC, Víctor Manuel Jáquez Leal
committed Details | Review

Description Víctor Manuel Jáquez Leal 2014-08-18 09:57:18 UTC
udpsrc gtk-doc documentation refers to sockfd and closefd properties which has
been removed. This patch replaces those references to socket and close-socket
respectively.
Comment 1 Víctor Manuel Jáquez Leal 2014-08-18 09:57:20 UTC
Created attachment 283726 [details] [review]
udp: fix udpsrc documentation

udpsrc gtk-doc documentation refers to sockfd and closefd properties which has
been removed. This patch replaces those references to socket and close-socket
respectively.
Comment 2 Tim-Philipp Müller 2014-08-18 10:03:18 UTC
Thanks for the patch, pushed:

commit 419332e287f866c7dccbd4eec52e6eb4a47df86d
Author: Víctor Manuel Jáquez Leal <vjaquez@igalia.com>
Date:   Mon Aug 18 11:45:54 2014 +0200

    udp: fix udpsrc documentation
    
    udpsrc gtk-doc documentation refers to sockfd and closefd properties which has
    been removed. This patch replaces those references to socket and close-socket
    respectively.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=734987